# hackathon-neovision

./: .coveragerc  .gitignore  README.md  SUJET.md  installation.md  pyproject.toml  pytest.ini
data/: expected_answers.json  expected_answers_all.json  expected_answers_test.json  questions.csv  questions_all.csv  questions_test.csv
neorando/: agent.py  async_runtime.py  cli.py  schemas.py  scraper.py  utils.py
neorando/evaluation/: __init__.py  compare.py  eval.py
tests/: test_evaluation.py  test_schemas.py  test_submission.py
wheels/: openai_callback-0.1.0-py3-none-any.whl
